--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,12 @@
 .navbar-brand {
   font-size: 44px;
   font-weight: bold;
+  color: #a855f7; /* Purple */
+  transition: color 0.3s ease;
+  }
+
+  .navbar-brand:hover {
+    color: #ff7eb3; 
 }
 
 .App {
@@ -27,11 +33,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
