--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,9 +1,9 @@
 .profile-container {
     display: flex;
     align-items: center;
-    margin: 10px;
+    margin: 30px;
     padding: 20px;
-    width: calc(100% - 20px); /* Full width minus 10px margin on both sides */
+    width: calc(100% - 70px); 
     background: rgba(0, 0, 0, 0.8);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 16px;
@@ -13,7 +13,6 @@
     width: 140px;
     height: 140px;
     border-radius: 50%;
-
     margin-right: 20px;
   }
   
@@ -52,7 +51,7 @@
     background-color: gray;
     padding: 20px 10px;
     margin: 0 10px;
-    border-radius: 0 0 12px 12px;
+    border-radius: 0 12px 12px 12px;
   }
 
 
