--- a/src/ProfileLists.css
+++ b/src/ProfileLists.css
@@ -1,12 +1,12 @@
 .profile-container-lists {
   display: flex;
-  align-items: center;
-  margin: 10px;
-  padding: 20px;
-  width: calc(100% - 20px); /* Full width minus 10px margin on both sides */
-  background: rgba(0, 0, 0, 0.8);
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-  border-radius: 16px;
+    align-items: center;
+    margin: 30px;
+    padding: 20px;
+    width: calc(100% - 70px); 
+    background: rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 16px;
   }
   
   .profile-image-lists {
@@ -51,7 +51,7 @@
     background-color: gray;
     padding: 20px 10px;
     margin: 0 10px;
-    border-radius: 0 0 12px 12px;
+    border-radius: 0 12px 12px 12px;
   }
 
 
