--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -3,7 +3,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background: url("/public/purple.jpg") center/cover no-repeat fixed;
+  background: url("/public/pictures/purple.jpg") center/cover no-repeat fixed;
   color: aliceblue;
 }
 
