--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -64,3 +64,10 @@ body, html {
     transform: scale(1.05);
   }
   
+  .popular-movies-section {
+    margin-top: 80px;
+    padding: 0 40px;
+    z-index: 2;
+    position: relative;
+  }
+  
