Add trending to browse

--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -16,7 +16,7 @@ body, html {
     align-items: center;
     justify-content: center;
     text-align: center;
-    overflow: hidden;
+    overflow: auto;
   }
   
   .landing-background {
