--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -1,5 +1,3 @@
-/* LandingPage.css */
-
 body, html {
     margin: 0;
     padding: 0;
@@ -19,6 +17,12 @@ body, html {
     overflow: auto;
   }
   
+  .browse-title {
+    font-size: 3rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  }
+  
   .landing-background {
     position: absolute;
     top: 0;
@@ -34,6 +38,7 @@ body, html {
     position: relative;
     z-index: 2;
     max-width: 700px;
+    margin-top: 60px;
   }
   
   .landing-title {
@@ -66,7 +71,7 @@ body, html {
   
   .popular-movies-section {
     margin-top: 80px;
-    padding: 0 40px;
+    width: 100%;
     z-index: 2;
     position: relative;
   }
