--- a/src/Pages/Profile/ProfilePages/ProfileLists.css
+++ b/src/Pages/Profile/ProfilePages/ProfileLists.css
@@ -1,3 +1,4 @@
+/*Ενοτητα για το προφιλ*/
 .profile-container-lists {
   display: flex;
   align-items: center;
@@ -21,6 +22,7 @@
   color: #a855f7;
 }
 
+/*Ενοτητα για τα tabs*/
 .tabs-wrapper-lists {
   display: flex;
   padding: 0 10px;
@@ -42,6 +44,7 @@
   background-color: #1a1a1a;
 }
 
+/*Ενοτητα για το κατω τμημα του προφιλ*/
 .profile-bottom-section-lists {
   padding: 0 10px 20px 10px;
 }
@@ -53,6 +56,8 @@
   border-radius: 0 12px 12px 12px;
 }
 
+
+/*Ενοτητα για το ημερολογιο*/
 .diary-entry-lists {
   background-color: #363636;
   padding: 16px;
@@ -60,10 +65,11 @@
   color: #bf8fdf;
 }
 
+/*Ενοτητα για τις λιστες*/
 .list-group {
   margin-bottom: 24px;
   padding: 20px;
-  background-color: #2a2a2a; /* Darker container for visibility */
+  background-color: #2a2a2a; 
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.5);
 }
@@ -73,7 +79,7 @@
   font-weight: bold;
   color: #ff7eb3;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin: 10px 0;
   user-select: none;
   display: flex;
   justify-content: space-between;
@@ -81,15 +87,7 @@
 }
 
 
-.list-title {
-  font-size: 1.4rem;
-  font-weight: bold;
-  color: #ff7eb3;
-  cursor: pointer;
-  margin: 10px 0;
-  user-select: none;
-}
-
+/*Ενοτητα για το grid των ταινιων*/
 .list-movie-grid {
   display: flex;
   flex-wrap: wrap;
